--- a/templates/store/store.html
+++ b/templates/store/store.html
@@ -144,7 +144,7 @@
 {#                            <del class="price-old">${{ product.images.url }}</del>#}
                         </div> <!-- price-wrap.// -->
                     </div>
-                    <a href="#" class="btn btn-block btn-primary">Add to cart </a>
+                    <a href="{% url 'add_cart' product.id %}" class="btn btn-block btn-primary">Add to cart </a>
                 </figcaption>
             </figure>
         </div> <!-- col.// -->
