--- a/templates/store/cart.html
+++ b/templates/store/cart.html
@@ -38,7 +38,13 @@
                         <div class="aside"><img src="{{ cart_item.product.images.url }}" class="img-sm"></div>
                         <figcaption class="info">
                             <a href="{{ cart_item.product.get_url }}" class="title text-dark">{{ cart_item.product.product_name }}</a>
-                            <p class="text-muted small">Color: 25 Mpx <br> Size: Canon</p>
+                            <p class="text-muted small">
+                                {% if cart_item.variations.all %}
+                                    {% for cart_item in cart_item.variations.all %}
+                                        {{ cart_item.variation_category | capfirst }} : {{ cart_item.variation_value | capfirst }} <br>
+                                    {% endfor %}
+                                {% endif %}
+                            </p>
                         </figcaption>
                     </figure>
                 </td>
@@ -46,13 +52,29 @@
                     <!-- col.// -->
                                 <div class="col">
                                     <div class="input-group input-spinner">
+
                                         <div class="input-group-prepend">
-                                        <a href="{% url 'remove_cart' cart_item.product.id %}" class="btn btn-light" type="button" id="button-plus"> <i class="fa fa-minus"></i></a>
+                                            <form action="{% url 'remove_cart' cart_item.product.id cart_item.id %}" method="POST">
+                                                {% csrf_token %}
+                                                {% for item in cart_item.variations.all %}
+                                                    <input type="hidden" name="{{ item.variation_category | lower }}" value = "{{ item.variation_value | capfirst }}">
+                                                {% endfor %}
+                                                <button class="btn btn-light" type="submit" id="button-plus"> <i class="fa fa-minus"></i></button>
+                                            </form>
                                         </div>
+
                                         <input type="text" class="form-control"  value="{{ cart_item.quantity }}">
+
                                         <div class="input-group-append">
-                                        <a href="{% url 'add_cart' cart_item.product.id %}" class="btn btn-light" type="button" id="button-minus"> <i class="fa fa-plus"></i></a>
+                                            <form action="{% url 'add_cart' cart_item.product.id%}" method="POST">
+                                                {% csrf_token %}
+                                                {% for item in cart_item.variations.all %}
+                                                    <input type="hidden" name="{{ item.variation_category | lower }}" value = "{{ item.variation_value | capfirst }}">
+                                                {% endfor %}
+                                                <button class="btn btn-light" type="submit" id="button-minus"> <i class="fa fa-plus"></i></button>
+                                            </form>
                                         </div>
+
                                     </div> <!-- input-group.// -->
                                 </div> <!-- col.// -->
                 </td>
@@ -63,7 +85,7 @@
                     </div> <!-- price-wrap .// -->
                 </td>
                 <td class="text-right">
-                <a href="{% url 'remove_cart_item' cart_item.product.id %}" class="btn btn-danger"> Remove</a>
+                <a href="{% url 'remove_cart_item' cart_item.product.id cart_item.id %}" class="btn btn-danger"> Remove</a>
                 </td>
             </tr>
         {% endfor %}
