--- a/templates/base.html
+++ b/templates/base.html
@@ -46,14 +46,14 @@ $(document).ready(function() {
 <body>
 
     <!-- Navbar -->
-    {% include 'includes/Navbar.html' %}
+    {% include 'includes/navbar.html' %}
 
         {% block content %}
             <!-- content -->
         {% endblock %}
 
     <!-- Footer -->
-    {% include 'includes/Footer.html' %}
+    {% include 'includes/footer.html' %}
 
 </body>
 </html>
