--- a/templates/store/product_detail.html
+++ b/templates/store/product_detail.html
@@ -30,7 +30,11 @@
                     <var class="price h4">${{ single_product.price }}</var>
                 </div>
 
-                <p>{{ single_product.description }}</p>
+                <p>
+                    {% for item in desc_list %}
+                        <li>{{ item }}</li>
+                    {% endfor %}
+                </p>
 
                 <hr>
                     <div class="row">
